--- a/html/index.html
+++ b/html/index.html
@@ -12,11 +12,13 @@
 
     <!-- A short BIO about Elon Musk in a paragraphbelement. -->
 
+    <img src="images/elon-musk.jpg" alt="elon">
+
     <p>
         A well know <b>american</b> <i>enterpreneur</i> and media person.
     </p>
 
-    <!-- <img src="images/elon-musk.jpg" alt="elon"> -->
+    
 
     <table>
         <thead>
