--- a/html/index.html
+++ b/html/index.html
@@ -23,10 +23,10 @@
     <table>
         <thead>
             <tr>
-                </th>#</th>
-                </th>Promise</th>
-                </th>Date</th>
-                </th>Status</th>
+                <th>#</th>
+                <th>Promise</th>
+                <th>Date</th>
+                <th>Status</th>
             </tr>
         </thead>
 
