--- a/lab-03/index.html
+++ b/lab-03/index.html
@@ -5,11 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Introduction</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"> 
 </head>
 <body>
     <h1 class="blue">Intoduction to CSS</h1>
     <p>This is just a quick introduction to CSS.</p>
     <div class="box"></div>
+
+    <div class="row">
+        <div class="col-12">
+            <table class="table table-stripe">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Address</th>
+                        <th>Gender</th>
+                        <th>FootSize</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+    
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Vér István</td>
+                        <td>verpistike@gmail.com</td>
+                        <td>Kecskemét</td>
+                        <td>male</td>
+                        <td>42</td>
+                        <td>
+                            <div class="btn-group">
+                                <button class="btn btn-primary">
+                                    <i class="fa fa-pencil" aria-hidden="true"></i>
+
+                                </button>
+                                <button class="btn btn-danger">
+                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                </button>
+                                <button class="btn btn-info">
+                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
